core: move overloaded function to its own file

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -177,6 +177,7 @@ install(FILES
     include/mavsdk/server_component.h
     include/mavsdk/mavlink_address.h
     include/mavsdk/vehicle.h
+    include/mavsdk/overloaded.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/mavsdk/mavlink_include.h
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mavsdk"
 )
