core: cleanup http loader
This fixes up HttpLoader and enables the unit tests again.

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -91,8 +91,7 @@ if (NOT BUILD_WITHOUT_CURL)
     list(APPEND UNIT_TEST_SOURCES
         ${PROJECT_SOURCE_DIR}/mavsdk/core/curl_test.cpp
         ${PROJECT_SOURCE_DIR}/mavsdk/core/hostname_to_ip_test.cpp
-        # TODO: add this again
-        #${PROJECT_SOURCE_DIR}/mavsdk/core/http_loader_test.cpp
+        ${PROJECT_SOURCE_DIR}/mavsdk/core/http_loader_test.cpp
     )
 else()
     target_compile_definitions(mavsdk
