--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(camera_zoom)
 add_subdirectory(component_metadata)
 add_subdirectory(disconnect)
 add_subdirectory(events)
+add_subdirectory(reboot)
 add_subdirectory(reconnect)
 add_subdirectory(fly_mission)
 add_subdirectory(fly_multiple_drones)
