--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -8,9 +8,6 @@ add_subdirectory(plugins)
 hunter_add_package(jsoncpp)
 find_package(jsoncpp REQUIRED)
 
-hunter_add_package(tinyxml2)
-find_package(tinyxml2 REQUIRED)
-
 find_package(libevents REQUIRED)
 
 target_link_libraries(mavsdk
@@ -18,8 +15,13 @@ target_link_libraries(mavsdk
     ${CMAKE_DL_LIBS}
     PRIVATE
     JsonCpp::JsonCpp
-    tinyxml2::tinyxml2
+    rapidxml::rapidxml
     LibEvents::LibEvents
+)
+
+target_compile_definitions(mavsdk
+    PRIVATE
+    RAPIDXML_NO_EXCEPTIONS=1
 )
 
 if (NOT APPLE AND NOT ANDROID AND NOT MSVC)
