--- a/src/MAVSDKConfig.cmake.in
+++ b/src/MAVSDKConfig.cmake.in
@@ -8,7 +8,7 @@ if(NOT @BUILD_SHARED_LIBS@)
 
     find_dependency(Threads REQUIRED)
     find_dependency(jsoncpp REQUIRED)
-    find_dependency(tinyxml2 REQUIRED)
+    find_dependency(rapidxml REQUIRED)
     find_dependency(LibLZMA REQUIRED)
     find_dependency(LibEvents REQUIRED)
 
