--- a/src/mavsdk.pc.in
+++ b/src/mavsdk.pc.in
@@ -6,6 +6,6 @@ includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 Name: MAVSDK
 Description: API and library for MAVLink compatible systems written in C++17
 Version: @MAVSDK_VERSION_STRING@
-Requires.private: libcurl jsoncpp tinyxml2
+Requires.private: libcurl jsoncpp rapidxml
 Libs: -L"${libdir}" -lmavsdk
 Cflags: -I"${includedir}" -I"${includedir}/mavsdk"
