--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -13,16 +13,20 @@ configure_file(version.h.in version.h)
 configure_file(include/mavsdk/mavlink_include.h.in include/mavsdk/mavlink_include.h)
 
 # Generate embedded XML header for libmav
-set(MAVLINK_XML_SOURCE "${CMAKE_BINARY_DIR}/third_party/mavlink/mavlink/src/mavlink/message_definitions/v1.0/common.xml")
+set(MAVLINK_MINIMAL_XML "${CMAKE_BINARY_DIR}/third_party/mavlink/mavlink/src/mavlink/message_definitions/v1.0/minimal.xml")
+set(MAVLINK_STANDARD_XML "${CMAKE_BINARY_DIR}/third_party/mavlink/mavlink/src/mavlink/message_definitions/v1.0/standard.xml")
+set(MAVLINK_COMMON_XML "${CMAKE_BINARY_DIR}/third_party/mavlink/mavlink/src/mavlink/message_definitions/v1.0/common.xml")
 set(EMBEDDED_XML_HEADER "${CMAKE_CURRENT_BINARY_DIR}/embedded_mavlink_xml.h")
 
 add_custom_command(
     OUTPUT ${EMBEDDED_XML_HEADER}
     COMMAND ${CMAKE_COMMAND} 
-        -DXML_SOURCE_PATH=${MAVLINK_XML_SOURCE}
+        -DMINIMAL_XML_PATH=${MAVLINK_MINIMAL_XML}
+        -DSTANDARD_XML_PATH=${MAVLINK_STANDARD_XML}
+        -DCOMMON_XML_PATH=${MAVLINK_COMMON_XML}
         -DOUTPUT_HEADER=${EMBEDDED_XML_HEADER}
         -P ${CMAKE_SOURCE_DIR}/cmake/generate_embedded_xml.cmake
-    DEPENDS ${MAVLINK_XML_SOURCE}
+    DEPENDS ${MAVLINK_MINIMAL_XML} ${MAVLINK_STANDARD_XML} ${MAVLINK_COMMON_XML}
     COMMENT "Generating embedded MAVLink XML header for core"
     VERBATIM
 )
