examples: add two examples for MavlinkDirect
This adds two examples:
- One to show the GPS message JSON output
- One to show stats about MAVLink messages arriving.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -33,6 +33,7 @@ add_subdirectory(gimbal_device_tester)
 add_subdirectory(log_callback)
 add_subdirectory(logfile_download)
 add_subdirectory(log_streaming)
+add_subdirectory(mavlink_direct)
 add_subdirectory(mavshell)
 add_subdirectory(multiple_drones)
 add_subdirectory(offboard)
