--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,6 +19,9 @@ jobs:
   Windows-mavsdk_server:
     name: Windows mavsdk_server build
     runs-on: windows-2022
+    strategy:
+      matrix:
+        arch: [x64, Win32]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -41,7 +44,7 @@ jobs:
           choco install jom
           echo "C:\Program Files\jom" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: configure
-        run: cmake -G"Visual Studio 17 2022"
+        run: cmake -G"Visual Studio 17 2022" -A ${{ matrix.arch }}
           $env:superbuild
           $env:cmake_prefix_path
           -DCMAKE_BUILD_TYPE=RelWithDebInfo
@@ -56,7 +59,7 @@ jobs:
       - name: Upload mavsdk_server binary as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: 'mavsdk_server-windows-x64-release'
+          name: 'mavsdk_server-windows-${{ matrix.arch == "x64" && "x64" || "x86" }}-release'
           path: 'install/bin/mavsdk_server_bin.exe'
           retention-days: 2
       - name: Publish mavsdk_server binary to release
@@ -65,13 +68,16 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: 'install/bin/mavsdk_server_bin.exe'
-          asset_name: 'mavsdk_server_win_x64.exe'
+          asset_name: 'mavsdk_server_win_${{ matrix.arch == "x64" && "x64" || "x86" }}.exe'
           tag: ${{ github.ref }}
           overwrite: true
 
   Windows-mavsdk-library:
     name: Windows mavsdk library build
     runs-on: windows-2022
+    strategy:
+      matrix:
+        arch: [x64, Win32]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -94,7 +100,7 @@ jobs:
           choco install jom
           echo "C:\Program Files\jom" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: configure
-        run: cmake -G"Visual Studio 17 2022"
+        run: cmake -G"Visual Studio 17 2022" -A ${{ matrix.arch }}
           $env:superbuild
           $env:cmake_prefix_path
           -DCMAKE_BUILD_TYPE=RelWithDebInfo
@@ -107,11 +113,11 @@ jobs:
       - name: build
         run: cmake --build build -j4 --config RelWithDebInfo --target install
       - name: Create zip file from mavsdk libraries
-        run: (cd install && 7z.exe a -tzip ../mavsdk-windows-x64-release.zip .)
+        run: (cd install && 7z.exe a -tzip ../mavsdk-windows-${{ matrix.arch == "x64" && "x64" || "x86" }}-release.zip .)
       - name: Upload mavsdk library as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: 'mavsdk-windows-x64-release'
+          name: 'mavsdk-windows-${{ matrix.arch == "x64" && "x64" || "x86" }}-release'
           path: 'install/'
           retention-days: 2
       - name: Publish mavsdk library to release
@@ -119,7 +125,7 @@ jobs:
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'mavsdk-windows-x64-release.zip'
-          asset_name: 'mavsdk-windows-x64-release.zip'
+          file: 'mavsdk-windows-${{ matrix.arch == "x64" && "x64" || "x86" }}-release.zip'
+          asset_name: 'mavsdk-windows-${{ matrix.arch == "x64" && "x64" || "x86" }}-release.zip'
           tag: ${{ github.ref }}
           overwrite: true
